--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## [0.2.2] - 2017-03-13
+### Changed
+  * Re-fixed pay-calculator.py
+
 ## [0.2.1] - 2017-02-22
 ### Changed
   * Fix pay-calculator.py
